--- a/aui/category-management/src/app/components/categories-list/categories-list.component.html
+++ b/aui/category-management/src/app/components/categories-list/categories-list.component.html
@@ -1,7 +1,7 @@
-<h2>Categories</h2>
+<h2>Sports</h2>
 
 <!-- Add Category Button -->
-<button (click)="addCategory()" style="margin-bottom: 15px;">Add New Category</button>
+<button (click)="addCategory()" style="margin-bottom: 15px;">Add New Sport</button>
 
 <!-- Categories Table -->
 <table border="1" cellspacing="0" cellpadding="10" style="width: 100%;">
