--- a/aui/category-management/src/app/components/element-form/element-form.component.html
+++ b/aui/category-management/src/app/components/element-form/element-form.component.html
@@ -1,7 +1,7 @@
-<h2>{{ isEditMode ? 'Edit Element' : 'Add New Element' }}</h2>
+<h2>{{ isEditMode ? 'Edit Sportsman' : 'Add New Sportsman' }}</h2>
 
 <form [formGroup]="form" (ngSubmit)="saveElement()">
-  <label for="name">Element Name:</label>
+  <label for="name">Sportsman Name:</label>
   <input id="name" type="text" formControlName="name" />
 
   <label for="rating">Rating:</label>
